Update code for 2021 edition, remove maven.