@@ -1,12 +1,12 @@
 package ee.itcollage.level7;
 
 import com.google.common.collect.Lists;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 
 public class DuplicateRemoverTest {
 
@@ -23,6 +23,6 @@ public class DuplicateRemoverTest {
     public void a_list_of_non_unique_elements_has_duplicates_removed() {
         List<Integer> initialList = Lists.newArrayList(1, 1, 1);
         List<Integer> duplicateFreeList = DuplicateRemover.removeDuplicates(initialList);
-        assertEquals(Arrays.asList(1), duplicateFreeList);
+        assertEquals(List.of(1), duplicateFreeList);
     }
 }
